# Multithread_Socket_Transmission

./: README.md
For Linux/Client/src/: Makefile  Makefile.am  Makefile.in  README.txt  client.cpp  config.h  config.h.in  config.status  configure  configure.ac
For Linux/Client/src/autom4te.cache/: output.1  requests  traces.0  traces.1
For Linux/Server/src/: Makefile  Makefile.am  Makefile.in  Method.cpp  Method.h  README.txt  config.h  config.h.in  config.status  configure  configure.ac  server.cpp
For Linux/Server/src/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
For Windows/Client/: Client.sln
For Windows/Client/Client/: Client.cpp  Client.vcxproj
For Windows/Server/Socket_Multithread_Server/: Method.h  Socket_Multithread.vcxproj.filters  Socket_Multithread_Server.cpp
Socket_Multithread/: Socket_Multithread.sln
Socket_Multithread/Socket_Multithread_Server/: Method.cpp  Socket_Multithread.vcxproj
